[workspace]
members = [
    "programs/*",
    "clients/rust"
]
resolver = "2"

[workspace.dependencies]
# Pin base64ct to version that doesn't require edition 2024
base64ct = "=1.7.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
