[package]
name = "reflect-single-pool-cli"
version = "1.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.37"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.15.8"
borsh = "1.5.0"
bincode = "1.3.1"
serde = "1.0.199"
serde_derive = "1.0.103"
serde_json = "1.0.116"
serde_with = "3.8.1"
solana-account-decoder = "1.18.12"
solana-clap-v3-utils = "1.18.12"
solana-cli-config = "1.18.12"
solana-cli-output = "1.18.12"
solana-client = "1.18.12"
solana-logger = "1.18.12"
solana-remote-wallet = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
solana-vote-program = "1.18.12"
spl-token = { version = "4.0", features = [
  "no-entrypoint",
] }
spl-token-client = "0.10.0"
spl-associated-token-account = { version = "2.3.0", features = [
  "no-entrypoint",
] }
reflect-single-pool = { version = "1.0.0", path = "../program", features = [
  "no-entrypoint",
] }

[dev-dependencies]
solana-test-validator = "1.18.12"
serial_test = "3.1.1"
test-case = "3.3"
tempfile = "3.10.1"

[[bin]]
name = "reflect-single-pool"
path = "src/main.rs"
