[package]
name = "insurance-fund"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insurance_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = [ "init-if-needed" ] }
anchor-spl = "0.29.0"
pyth-solana-receiver-sdk = "0.3.1"
switchboard-solana = "0.29"