[package]
name = "rlp-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "rlp_client"
path = "src/mod.rs"

[dependencies]
borsh = "1.5"
solana-program = "3.0"
solana-pubkey = "3.0"
solana-instruction = "3.0"
solana-account-info = "3.0"
solana-program-error = "3.0"
solana-cpi = "3.0"
solana-account = "3.0"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"