[package]
name = "rlp-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
fetch = ["dep:solana-client", "dep:solana-account"]
serde = ["dep:serde", "dep:serde_with"]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang/idl-build"]

[dependencies]
borsh = { version = "1.6.1", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2"
thiserror = "1.0"
solana-pubkey = { version = "2.1", features = ["borsh"] }
solana-instruction = "2.1"
solana-account-info = "2.1"
solana-program-error = "2.1"
solana-cpi = "2.1"

# Optional dependencies for features
solana-client = { version = "2.1", optional = true }
solana-account = { version = "2.1", optional = true }
anchor-lang = { version = "0.31.1", optional = true }
serde = { version = "1.0", optional = true }
serde_with = { version = "3.0", optional = true }
