[package]
name = "rlp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
autobenches = false
autotests = false

[lib]
crate-type = ["cdylib", "lib"]
name = "rlp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = [ "init-if-needed" ] }
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "1.0.0"
spl-math = { version = "0.3.0", features = [ "no-entrypoint" ]}
strum = "0.27"
strum_macros = "0.27"

